chore: make sure background for library listing is top-aligned

--- a/assets/src/scss/_library.scss
+++ b/assets/src/scss/_library.scss
@@ -116,7 +116,7 @@
 		width: 100%;
 		height: 300px;
 		background-color: #b7c0cc;
-		background-position: center;
+		background-position: top center;
 		background-size: cover;
 
 		&:hover {
