--- a/editor/src/editor.scss
+++ b/editor/src/editor.scss
@@ -218,7 +218,7 @@
 							width: 100%;
 							height: 300px;
 							background-color: #b7c0cc;
-							background-position: center;
+							background-position: top center;
 							background-size: cover;
 
 							&:hover {
